aligned links vertically in nav bar, aligned 'Joanna Wheeler' and icons vertically and gave it a white background that floats in front of a black background. made container fluid to stretch across screen. made navbar responsive to stack correctly at sm media query. made 'Joanna Wheeler' stay left when md or bigger, and center when sm or smaller. added titles to sections. added headers to each section (about, portfolio, skills, contact)

--- a/styles.less
+++ b/styles.less
@@ -2,7 +2,14 @@
   text-align: center;
   @media (min-width: 768px) {
         text-align: left;
+        background-color: white;
     }
+}
+
+.verticalAlign {
+  @media (min-width: 768px) {
+    margin-top: 7px;
+  }
 }
 
 .redirectIcon {
@@ -22,5 +29,17 @@
 }
 
 #navTextLeft {
-  font-size: 40px;
+  font-size: 30px;
+  display: block;
+  background-color: black;
+}
+
+#JoannaWheeler {
+    background-color: white;
+    border: 10px solid;
+    border-color: white;
+}
+
+h3 {
+  color: green
 }
